--- a/rootdir/etc/init.mt6781.rc
+++ b/rootdir/etc/init.mt6781.rc
@@ -1118,6 +1118,10 @@ on property:sys.boot_completed=1
 	on property:sys.tp.grip_enable=270
 	write /proc/tp_grip_area 270
 
+# initialize powerHAL when boot is completed
+on property:sys.boot_completed=1
+    setprop vendor.mediatek.powerhal.init 1
+
 #service dpfd /vendor/bin/dpfd
 #	user root
 #	group system media
